--- a/css/card.css
+++ b/css/card.css
@@ -46,18 +46,22 @@
   margin-bottom: 0;
 }
 
-.card-body-widthwise {
-  display: flex;
-}
-
-.card-body-widthwise img {
+.card-body .widthwise img {
   width: 40%;
   margin-right: 25px;
   object-fit: cover;
 }
 
-.card-body-widthwise-sentence {
+.card-body .widthwise-reverse img {
+  width: 40%;
+  margin-left: 25px;
+  object-fit: cover;
+}
+
+.card-body-sentence {
+  width: 50%;
   display: flex;
+  flex-grow: 1;
   justify-content: center;
   flex-direction: column;
 }
