--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,74 @@
+header {
+  width: 100%;
+  height: 50px;
+  background-color: rgba(255,255,255,.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 20px;
+  z-index: 100;
+}
+
+.header-item {
+  margin-left: 4vw;
+  font-family: 'Phenomena-Bold';
+  font-size: 30px;
+  letter-spacing: 0.2em;
+}
+
+.header-item:first-child {
+  margin-left: 0;
+}
+
+#top {
+  height: 85vh;
+  position: relative;
+}
+
+.top-title {
+  font-family: 'Phenomena-Bold';
+  font-size: 8vw;
+  letter-spacing: 0.1em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.top-subtitle {
+  font-family: 'Phenomena-Bold';
+  font-size: 3vw;
+  letter-spacing: 0.1em;
+  position: absolute;
+  top: 65%;
+  left: 76%;
+  transform: translate(-50%,-50%);
+}
+
+#canvas-container-top,
+#canvas-container-bottom {
+  width: 100vw;
+  height: 100px;
+}
+
+#sineCanvas-bottom {
+  background-color: var(--lblue);
+}
+
+.content-header {
+  font-family: 'Phenomena-Bold';
+  font-size: 5vw;
+  letter-spacing: 0.2em;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+
+
+
 .mainvisual {
   margin-bottom: 30px;
 }
@@ -11,7 +82,7 @@
 }
 
 .content {
-  margin: 0 12%;
+  padding: 0 12%;
 }
 
 @media screen and (max-width:480px) {
