--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,35 @@ p {
 .half > * {
   width: 48%;
 }
-/* 
-.half.align-center {
-  align-items: center;
-} */
+
+.widthwise {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.widthwise img {
+  width: 200px;
+  height: 100%;
+  object-fit: contain;
+  margin: 0 50px 20px 0;
+  border: solid 1px #eee;
+}
+
+.widthwise img:last-of-type {
+  margin-right: 0;
+}
+
+.widthwise.oblong img {
+  width: 450px;
+}
+
+.widthwise.full > * {
+  width: 100%;
+  height: 30vw;
+  object-fit: contain;
+}
+
 
 @media screen and (max-width:480px) {
   .half > * {
